remove one level in json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx json-server --host 192.168.1.11 --port 8080 --watch db.json",
+    "start": "npx json-server --host 192.168.1.11 --port 8080 --watch db.json --routes routes.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": "git+https://github.com/znatz/jsonserver.git",
